Fix order of print statements in the publisher command